--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        <activity
+            android:name=".ui.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,11 +25,11 @@
             android:theme="@style/AppTheme.BlackStatusBar" />
         <activity
             android:name=".ui.SearchResultActivity"
-            android:label="@string/title_activity_search_result"
-            android:theme="@style/AppTheme" />
+            android:label="@string/title_activity_search_result" />
         <activity
             android:name=".ui.SettingsActivity"
-            android:label="@string/title_activity_settings" />
+            android:label="@string/title_activity_settings"
+            android:theme="@style/AppTheme.PreferenceFix" />
     </application>
 
 </manifest>
