--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,8 +32,7 @@
             android:label="@string/title_activity_search_result" />
         <activity
             android:name=".ui.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme.PreferenceFix" />
+            android:label="@string/title_activity_settings" />
     </application>
 
 </manifest>
